[package]
name = "cicada-cli"
description = "Write CI/CD Pipelines in TypeScript"
version = "0.1.44"
readme = "../../README.md"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# downloads a managed version of deno/buildctl if a valid version is not found on the path
managed-bins = ["dep:zip", "dep:tar", "dep:flate2"]
# enables segment + sentry telemetry
telemetry = ["dep:sentry"]
# enables self updating functionality
self-update = ["dep:self_update"]

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.70"
base64 = "0.21.0"
# buildkit-rs = { path = "../../../buildkit-rs", version = "0.1.0" }
buildkit-rs = { git = "https://github.com/cicadahq/buildkit-rs.git", version = "0.1.0" }
camino = { version = "1.1.4", features = ["serde1"] }
clap = { version = "4.1.13", features = [
    "derive",
    "env",
    "deprecated",
    "wrap_help",
    "unicode",
    "cargo",
] }
clap_complete = "4.2.0"
dialoguer = "0.10.4"
dirs = "5.0.0"
dotenvy = "0.15.7"
flate2 = { version = "1.0.25", optional = true, features = ["zlib"]}
futures = "0.3.28"
humansize = "2.1.3"
indicatif = "0.17.3"
once_cell = "1.17.1"
open = "4.0.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.8.0"
self_update = { version = "0.36.0", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
    "rustls",
], optional = true }
semver = "1.0.17"
sentry = { version = "0.31.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
], optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
shlex = "1.1.0"
tar = { version = "0.4.38", optional = true }
tempfile = "3.5.0"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = [
    "serde_json",
    "env-filter",
    "json",
] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
zip = { version = "0.6.4", default-features = false, features = [
    "deflate",
], optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "rustls",
    "socks",
] }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.11.16", default-features = false, features = [
    "default-tls",
    "json",
    "socks",
] }
